--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  min-width: 100vh;
 }
 .body {
   background-color: rgb(0, 30, 60);
